--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Pizza-Web</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
         integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -18,8 +18,8 @@
             <ul id="menu-bar">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#flavours">Flavours</a></li>
-                <li><a href="#">Contact</a></li>
-                <li><a href="#">Services</a></li>
+                <li><a href="#contact">Contact</a></li>
+                <li><a href="#about">About</a></li>
             </ul>
             <span><i class="fa-solid fa-bars"></i></span>
         </nav>
@@ -44,32 +44,98 @@
                     </div>
                     <p>fresh,good,quality</p>
                     <h5>chese flavour</h5>
-                    <span>99$</span>
+                    <span>99.$</span>
                     <button>Add To Cart</button>
                 </div>
 
 
                 <div class="card">
                     <div class="image-container">
-                        <img src="assets/card-1.png" alt="">
+                        <img src="assets/card-2.png" alt="">
                     </div>
                     <p>fresh,good,quality</p>
-                    <h5>chese flavour</h5>
-                    <span>99$</span>
+                    <h5>Fajita flavour</h5>
+                    <span>2$</span>
                     <button>Add To Cart</button>
 
                 </div>
 
                 <div class="card">
                     <div class="image-container">
-                        <img src="assets/card-1.png" alt="">
+                        <img src="assets/card-3.png" alt="" id="image-3">
                     </div>
                     <p>fresh,good,quality</p>
-                    <h5>chese flavour</h5>
-                    <span>99$</span>
+                    <h5>Bbq flavour</h5>
+                    <span>4$</span>
                     <button>Add To Cart</button>
                 </div>
             </div>
+        </section>
+
+        <section id="contact">
+            <div class="contact-container">
+                <div class="form">
+                    <form>
+                        <h2>Contact</h2>
+                        <input type="text" class="input-name" placeholder="Enter Your Name">
+                        <input type="email" class="input-email" placeholder="Enter Your Email">
+                        <input type="text" placeholder="Enter Your Message">
+                        <input type="submit" id="submit-btn">
+                    </form>
+                </div>
+            </div>
+        </section>
+
+        <section id="about">
+            <footer class="footer">
+  <div class="footer-container">
+
+    <!-- About -->
+    <div class="footer-box">
+      <h3>About Us</h3>
+      <p>
+        We serve fresh and delicious pizzas made with quality ingredients.
+        Our goal is to give you the best taste with fast and friendly service.
+      </p>
+    </div>
+
+    <!-- Quick Links -->
+    <div class="footer-box">
+      <h3>Quick Links</h3>
+      <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#flavours">Flavour</a></li>
+        <li><a href="#contact">Contact</a></li>
+        <li><a href="#about">About</a></li>
+      </ul>
+    </div>
+
+    <!-- Contact -->
+    <div class="footer-box">
+      <h3>Contact Us</h3>
+      <p><i class="fa-solid fa-location-dot"></i> Karachi, Pakistan</p>
+      <p><i class="fa-solid fa-phone"></i> +92 99999999</p>
+      <p><i class="fa-solid fa-envelope"></i> foodie@pizzash.com</p>
+    </div>
+
+    <!-- Social -->
+    <div class="footer-box">
+      <h3>Follow Us</h3>
+      <div class="social-links">
+        <i class="fa-brands fa-facebook-f"></i>
+        <i class="fa-brands fa-instagram"></i>
+        <i class="fa-brands fa-twitter"></i>
+      </div>
+    </div>
+
+  </div>
+
+  <!-- Bottom -->
+  <div class="footer-bottom">
+    <p>© 2025 Pizza Shop. All Rights Reserved.</p>
+  </div>
+</footer>
+
         </section>
     </main>
 </body>
